# Storm

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/storm/: constants.hpp  pythia_spectra.hpp  rambo.hpp  simple.hpp  types.hpp
src/: pythia_spectra.cpp  rambo.cpp
src/simple/: msqrd.cpp  partially_integrated_msqrd.cpp  spectra.cpp  sqrd_matrix_elements.cpp  widths.cpp  wwidths.cpp
storm/: __init__.py  constants.py
storm/models/: __init__.py
storm/models/simple/: __init__.py  _base.py  _hazma.py  _simple_pythia.py  _simple_spectra.pyi  _simple_widths.pyi  _spectra.py  _widths.py  spectra.cpp  states.py  widths.cpp
tests/: test_model.cpp  test_pythia.cpp  test_spectrum.cpp
